--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   firebase_auth: ^4.2.5
   flutter:
     sdk: flutter
+  cloud_firestore: ^4.3.1
 
 dev_dependencies:
   flutter_lints: ^2.0.0
